--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,9 @@ a:hover {
     z-index: 997;
     transition: all 0.5s;
     background: rgba(42, 44, 57, 0.9);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   
   #header.header-transparent {
@@ -112,24 +115,20 @@ a:hover {
   #header.header-scrolled {
     background: rgba(42, 44, 57, 0.9);
   }
-  
-  /* #header .logo h1 {
-    font-size: 28px;
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    font-weight: 700;
-    letter-spacing: 1px;
-  } */
-  
-  /* #header .logo h1 a, #header .logo h1 a:hover {
-    color: #fff;
-    text-decoration: none;
-  } */
+
+  #header .headerContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px 10px;
+    width: 90%;
+    max-width: 1536px;
+  }
   
   #header .logo img.header-scrolled {
       content: url("../../assets/img/LeaCloud_logo_white.png");
-      width: 85%;
+      /* width: 85%; */
+      width: 245px;
       max-height: 100%;
       margin-left: -7px;
   }
@@ -148,78 +147,57 @@ a:hover {
     border-bottom: .25rem solid #fff;
   }
 
-  #header .headerList {
-    display: flex;
-    flex-direction: row;
-    /* background-color: turquoise; */
-    /* width: 400px; */
-  }
-
-  #header .navMenuImg {
-    margin-left: 10px;
-  }
-
   #header .navMenuImg:hover {
     opacity: 0.5;
     transition: all 0.4s ease-in-out;
+    cursor: pointer;
+  }
+
+  #header .logo .navMenuImg {
+    display: none;
+  }
+
+  #header .normal-ul {
+    display: flex;
+    align-items: center;
+  }
+
+  #header .normal-ul .navMenuImg {
+    margin-left: 20px;
   }
 
   /* #header .navMenuImg:focus + ul {
     visibility: visible;
   } */
 
-  #header .mobile-ul {
-    display: none;
-    width: 200px;
-  }
-
-  #header .normal-ul {
-    width: 400px;
-  }
-  
-  @media (max-width: 991px) {
-    #header .normal-ul {
-      display: none;
-    }
-
-    #header .mobile-ul {
-      display: block;
-    }
-  }
-  
-  /*--------------------------------------------------------------
-  # Navigation Menu
-  --------------------------------------------------------------*/
-  /* Desktop Navigation */
   .nav-menu, .nav-menu * {
     margin: 0;
     padding: 0;
     list-style: none;
   }
-  
+
   .nav-menu > ul > li {
     position: relative;
     white-space: nowrap;
     float: left;
+    margin-left: 14px;
     color: #fff;
   }
-  
+
   .nav-menu a {
     display: block;
     position: relative;
     color: #fff;
-    padding: 5px 15px 7px 15px;
-    margin-left: 5px;
+    padding: 0px 5px;
     transition: 0.3s;
     font-size: 14px;
-    border-radius: 50px;
     font-family: "Open Sans", sans-serif;
   }
   
-  .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+  /* .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a { */
     /* background: #ef6603; */
     /* text-decoration: none; */
-  }
+  /* } */
   
   .nav-menu .drop-down ul {
     display: block;
@@ -233,14 +211,24 @@ a:hover {
     background: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: ease all 0.3s;
-    border-radius: 15px;
-    margin-top: 10px;
+    border-radius: 3px;
+    margin-top: 20px;
   }
   
   .nav-menu .drop-down:hover > ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
+  }
+
+  .nav-menu .drop-down ul .triangle {
+    border-left: 20px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 7px solid transparent;
+    border-bottom: 20px solid #fff;
+    background-color: transparent;
+    position: absolute;
+    top: -18px;
   }
   
   .nav-menu .drop-down li {
@@ -261,11 +249,11 @@ a:hover {
     background: none;
   }
   
-  .nav-menu .drop-down > a:after {
-    content: "\25BC";
+  /* .nav-menu .drop-down > a:after { */
+    /* content: "\25BC"; */
     /* font-family: IcoFont;
     padding-left: 5px; */
-  }
+  /* } */
   
   .nav-menu .drop-down .drop-down ul {
     top: 0;
@@ -289,7 +277,7 @@ a:hover {
     right: 15px;
   }
   
-  @media (max-width: 1366px) {
+  /* @media (max-width: 1366px) {
     .nav-menu .drop-down .drop-down ul {
       left: -90%;
     }
@@ -299,116 +287,51 @@ a:hover {
     .nav-menu .drop-down .drop-down > a:after {
       content: "\ea9d";
     }
+  } */
+  
+  @media (max-width: 625px) {
+    #header .headerContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0px 0px;
+      width: 100%;
+    }
+
+    #header .logo {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 95%;
+      height: 80px;
+      padding-top: 10px;
+    }
+
+    #header .logo .navMenuImg {
+      display: block;
+    }
+    #header .normal-ul {
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      background: linear-gradient(to bottom, #80c3f3, #4a90e2);
+    }
+
+    #header .normal-ul .navMenuImg {
+      display: none;
+    }
+    
+    .nav-menu > ul > li {
+      margin: 0px 15px;
+    }
   }
 
-  
-  
-  /* Mobile Navigation */
-  /* .mobile-nav-toggle {
-    position: fixed;
-    right: 15px;
-    top: 15px;
-    z-index: 9998;
-    border: 0;
-    background: none;
-    font-size: 24px;
-    transition: all 0.4s;
-    outline: none !important;
-    line-height: 1;
-    cursor: pointer;
-    text-align: right;
+  @media (max-width: 326px) {
+    .nav-menu > ul > li {
+      margin: 0px 8px;
+    }
   }
-  
-  .mobile-nav-toggle i {
-    color: #fff;
-  }
-  
-  .mobile-nav {
-    position: fixed;
-    top: 55px;
-    right: 15px;
-    bottom: 15px;
-    left: 15px;
-    z-index: 9999;
-    overflow-y: auto;
-    background: #fff;
-    transition: ease-in-out 0.2s;
-    opacity: 0;
-    visibility: hidden;
-    border-radius: 10px;
-    padding: 10px 0;
-  }
-  
-  .mobile-nav * {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  .mobile-nav a {
-    display: block;
-    position: relative;
-    color: #2a2c39;
-    padding: 10px 20px;
-    font-weight: 500;
-    outline: none;
-  }
-  
-  .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-    color: #ef6603;
-    text-decoration: none;
-  }
-  
-  .mobile-nav .drop-down > a:after {
-    content: "\ea99";
-    font-family: IcoFont;
-    padding-left: 10px;
-    position: absolute;
-    right: 15px;
-  }
-  
-  .mobile-nav .active.drop-down > a:after {
-    content: "\eaa1";
-  }
-  
-  .mobile-nav .drop-down > a {
-    padding-right: 35px;
-  }
-  
-  .mobile-nav .drop-down ul {
-    display: none;
-    overflow: hidden;
-  }
-  
-  .mobile-nav .drop-down li {
-    padding-left: 20px;
-  }
-  
-  .mobile-nav-overly {
-    width: 100%;
-    height: 100%;
-    z-index: 9997;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: rgba(20, 21, 28, 0.6);
-    overflow: hidden;
-    display: none;
-    transition: ease-in-out 0.2s;
-  }
-  
-  .mobile-nav-active {
-    overflow: hidden;
-  }
-  
-  .mobile-nav-active .mobile-nav {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .mobile-nav-active .mobile-nav-toggle i {
-    color: #fff;
-  } */
   
   /*--------------------------------------------------------------
   # Hero Section
@@ -1312,7 +1235,7 @@ a:hover {
   }
 
   .pricing .featured .star {
-    color: #ff9f00;
+    color: #ffbf00;
     margin-left: -30px;
     margin-top: 10px;
   }
