--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,11 +126,11 @@ a:hover {
   }
   
   #header .logo img.header-scrolled {
-      content: url("../../assets/img/LeaCloud_logo_white.png");
-      /* width: 85%; */
-      width: 245px;
-      max-height: 100%;
-      margin-left: -7px;
+    content: url("../../assets/img/LeaCloud_logo_white.png");
+    /* width: 85%; */
+    width: 245px;
+    max-height: 100%;
+    margin-left: -7px;
   }
 
   #header .logo img {
@@ -334,19 +334,29 @@ a:hover {
   }
   
   /*--------------------------------------------------------------
-  # Hero Section
+  # banner Section
   --------------------------------------------------------------*/
-  #hero {
-    background-color: #dfefff;
+  #banner {
+    /* background-color: #dfefff;
     background-image: url('../../assets/img/Banner3.png');
     padding: 0px 0px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    background-attachment: fixed;
+    background-attachment: fixed; */
+
+    background-color: #dfefff;
+    background-image: url('../../assets/img/Banner3.png');
+    padding: 0px 0px;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    height: 53vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
-  #hero .carousel-container {
+  /* #hero .carousel-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -355,26 +365,38 @@ a:hover {
     position: relative;
     height: 70vh;
     padding-top: 60px;
-  }
+  } */
 
-  #hero .bannerContent {
+  #banner .bannerContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 90vh;
-    padding-top: 60px;
+    height: 100%;
+    background-color: rgb(136, 117, 241, 0.5);
+    width: 90%;
+    max-width: 1536px;
   }
 
-  #hero .bannerContentTitle {
+  #banner .bannerContent {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* height: 100%; */
+    background-color: rgb(238, 104, 209);
+  }
+
+  #banner .bannerContentTitle {
     margin-top: 10px;
     font-size: 35px;
     font-weight: bold;
     background: -webkit-linear-gradient(#696969, #b4ac9c 50% , #384456 55%, #696969 70%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    width: 98%;
+    margin: 0 auto 0 auto;
   }
 
-  #hero .bannerContentSubTitle {
+  #banner .bannerContentSubTitle {background-color: khaki;
     color: #1976D2;
     margin-top: 10px;
     font-size: 22px;
@@ -383,14 +405,14 @@ a:hover {
     margin: 0 auto 0 auto;
   }
 
-  #hero .bannerContentText {
-    width: 80%;
+  #banner .bannerContentText {background-color: rgb(240, 200, 140);
+    width: 90%;
     margin: 30px auto 0 auto;
     font-weight: bold;
     font-size: 18px;
   }
 
-  #hero .dotLineArrow {
+  #banner .dotLineArrow {
       margin-left: 15px;
   }
 
@@ -416,48 +438,104 @@ a:hover {
     transform: rotate(45deg);
   } */
 
-  #hero a {
+  #banner a {
     color: #8b8f94;
   }
 
-  #hero .tryNowBtn {
+  #banner .tryNowBtn {
     font-size: 30px;
     position: relative;
     top: 20%;
   }
 
-  #hero .tryNowBtn:hover {
+  #banner .tryNowBtn:hover {
     color: #1976D2;
   }
   
-  #hero h2 {
+  #banner h2 {
     color: #fff;
     margin-bottom: 30px;
     font-size: 48px;
     font-weight: 700;
   }
   
-  #hero p {
+  #banner p {
     width: 95%;
     -webkit-animation-delay: 0.4s;
     animation-delay: 0.4s;
     margin: 0 auto 30px auto;
     color: #1976D2;
   }
+
+  @media (max-width: 991px) {
+    /* #banner {
+      margin-top: 150px;
+    } */
+
+    /* #banner .bannerContent {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      height: 80vw;
+      margin-top: 90px;
+
+      background: url('../../assets/img/Banner3.png');
+      background-repeat: no-repeat;
+      background-size: 100% auto;
+    } */
+
+    /* #banner .bannerContainer {
+      background-color: #2742dd;
+      width: 100%;
+    } */
+
+    #banner .bannerContentTitle {
+      /* font-size: 35px; */
+      font-size: 3.5vw;
+    }
   
-  #hero .carousel-control-prev, #hero .carousel-control-next {
-    width: 10%;
+    #banner .bannerContentSubTitle {
+      /* font-size: 22px; */
+      font-size: 2.2vw;
+    }
+  
+    #banner .bannerContentText {
+      /* font-size: 18px; */
+      font-size: 1.8vw;
+      margin: 3vw auto 0 auto;
+    }
+
+    #banner .dotLineArrow {
+      /* margin-left: 15px; */
+      width: 10%;
+      height: auto;
+    }
+
+    #banner .tryNowBtn {
+      /* font-size: 30px; */
+      font-size: 4vw;
+    }
+  }
+
+  @media (max-width: 625px) {
+    #banner {
+      margin-top: 88px;
+    }
   }
   
-  #hero .carousel-control-next-icon, #hero .carousel-control-prev-icon {
+  /* #hero .carousel-control-prev, #hero .carousel-control-next {
+    width: 10%;
+  } */
+  
+  /* #hero .carousel-control-next-icon, #hero .carousel-control-prev-icon {
     background: none;
     font-size: 48px;
     line-height: 1;
     width: auto;
     height: auto;
-  }
+  } */
   
-  #hero .btn-get-started {
+  /* #hero .btn-get-started {
     font-family: "Raleway", sans-serif;
     font-weight: 500;
     font-size: 14px;
@@ -472,37 +550,38 @@ a:hover {
     -webkit-animation-delay: 0.8s;
     animation-delay: 0.8s;
     border: 2px solid #ef6603;
-  }
+  } */
   
-  #hero .btn-get-started:hover {
+  /* #hero .btn-get-started:hover {
     background: #ef6603;
     color: #fff;
     text-decoration: none;
-  }
+  } */
   
-  @media (min-width: 1024px) {
+  /* @media (min-width: 1024px) {
     #hero p {
       width: 60%;
     }
     #hero .carousel-control-prev, #hero .carousel-control-next {
       width: 5%;
     }
-  }
+  } */
   
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     #hero .carousel-container, #hero .bannerContent {
       height: 90vh;
     }
     #hero h2 {
       font-size: 28px;
     }
-  }
+  } */
   
-  .hero-waves {
+  .banner-waves {
     display: block;
     width: 100%;
     height: 60px;
     position: relative;
+    /* background-color: lightcoral; */
   }
   
   .wave1 use {
