--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,6 @@ a:hover {
   
   #header .logo img.header-scrolled {
     content: url("../../assets/img/LeaCloud_logo_white.png");
-    /* width: 85%; */
     width: 245px;
     max-height: 100%;
     margin-left: -7px;
@@ -277,18 +276,6 @@ a:hover {
     right: 15px;
   }
   
-  /* @media (max-width: 1366px) {
-    .nav-menu .drop-down .drop-down ul {
-      left: -90%;
-    }
-    .nav-menu .drop-down .drop-down:hover > ul {
-      left: -100%;
-    }
-    .nav-menu .drop-down .drop-down > a:after {
-      content: "\ea9d";
-    }
-  } */
-  
   @media (max-width: 625px) {
     #header .headerContainer {
       display: flex;
@@ -310,7 +297,14 @@ a:hover {
 
     #header .logo .navMenuImg {
       display: block;
+      border-radius: 30%;
+      background-color: rgba(42, 44, 57, 0.9);
     }
+
+    #header .logo .navMenuImg.header-scrolled-detailbtn {
+      background-color: transparent;
+    }
+
     #header .normal-ul {
       flex-direction: row;
       justify-content: center;
@@ -337,14 +331,6 @@ a:hover {
   # banner Section
   --------------------------------------------------------------*/
   #banner {
-    /* background-color: #dfefff;
-    background-image: url('../../assets/img/Banner3.png');
-    padding: 0px 0px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed; */
-
     background-color: #dfefff;
     background-image: url('../../assets/img/Banner3.png');
     padding: 0px 0px;
@@ -355,24 +341,12 @@ a:hover {
     flex-direction: column;
     align-items: center;
   }
-  
-  /* #hero .carousel-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    position: relative;
-    height: 70vh;
-    padding-top: 60px;
-  } */
 
   #banner .bannerContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
     height: 100%;
-    background-color: rgb(136, 117, 241, 0.5);
     width: 90%;
     max-width: 1536px;
   }
@@ -381,8 +355,6 @@ a:hover {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    /* height: 100%; */
-    background-color: rgb(238, 104, 209);
   }
 
   #banner .bannerContentTitle {
@@ -396,7 +368,7 @@ a:hover {
     margin: 0 auto 0 auto;
   }
 
-  #banner .bannerContentSubTitle {background-color: khaki;
+  #banner .bannerContentSubTitle {
     color: #1976D2;
     margin-top: 10px;
     font-size: 22px;
@@ -405,7 +377,7 @@ a:hover {
     margin: 0 auto 0 auto;
   }
 
-  #banner .bannerContentText {background-color: rgb(240, 200, 140);
+  #banner .bannerContentText {
     width: 90%;
     margin: 30px auto 0 auto;
     font-weight: bold;
@@ -415,28 +387,6 @@ a:hover {
   #banner .dotLineArrow {
       margin-left: 15px;
   }
-
-  /* #hero .right {
-    display: inline-block;
-    width: 2em;
-    height: 2em;
-    border: 0.2em solid #666;
-    border-radius: 50%;
-  }
-  
-  #hero .right:after {
-    content: '';
-      display: inline-block;
-    margin-top: 0.4em;
-    margin-left: 0.4em;
-    width: 0.6em;
-    height: 0.6em;
-    border-top: 0.2em solid #666;
-    border-right: 0.2em solid #666;
-    -moz-transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-  } */
 
   #banner a {
     color: #8b8f94;
@@ -452,13 +402,6 @@ a:hover {
     color: #1976D2;
   }
   
-  #banner h2 {
-    color: #fff;
-    margin-bottom: 30px;
-    font-size: 48px;
-    font-weight: 700;
-  }
-  
   #banner p {
     width: 95%;
     -webkit-animation-delay: 0.4s;
@@ -468,51 +411,25 @@ a:hover {
   }
 
   @media (max-width: 991px) {
-    /* #banner {
-      margin-top: 150px;
-    } */
-
-    /* #banner .bannerContent {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      height: 80vw;
-      margin-top: 90px;
-
-      background: url('../../assets/img/Banner3.png');
-      background-repeat: no-repeat;
-      background-size: 100% auto;
-    } */
-
-    /* #banner .bannerContainer {
-      background-color: #2742dd;
-      width: 100%;
-    } */
-
     #banner .bannerContentTitle {
-      /* font-size: 35px; */
       font-size: 3.5vw;
     }
   
     #banner .bannerContentSubTitle {
-      /* font-size: 22px; */
       font-size: 2.2vw;
     }
   
     #banner .bannerContentText {
-      /* font-size: 18px; */
       font-size: 1.8vw;
       margin: 3vw auto 0 auto;
     }
 
     #banner .dotLineArrow {
-      /* margin-left: 15px; */
       width: 10%;
       height: auto;
     }
 
     #banner .tryNowBtn {
-      /* font-size: 30px; */
       font-size: 4vw;
     }
   }
@@ -523,65 +440,11 @@ a:hover {
     }
   }
   
-  /* #hero .carousel-control-prev, #hero .carousel-control-next {
-    width: 10%;
-  } */
-  
-  /* #hero .carousel-control-next-icon, #hero .carousel-control-prev-icon {
-    background: none;
-    font-size: 48px;
-    line-height: 1;
-    width: auto;
-    height: auto;
-  } */
-  
-  /* #hero .btn-get-started {
-    font-family: "Raleway", sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 12px 32px;
-    border-radius: 50px;
-    transition: 0.5s;
-    line-height: 1;
-    margin: 10px;
-    color: #fff;
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
-    border: 2px solid #ef6603;
-  } */
-  
-  /* #hero .btn-get-started:hover {
-    background: #ef6603;
-    color: #fff;
-    text-decoration: none;
-  } */
-  
-  /* @media (min-width: 1024px) {
-    #hero p {
-      width: 60%;
-    }
-    #hero .carousel-control-prev, #hero .carousel-control-next {
-      width: 5%;
-    }
-  } */
-  
-  /* @media (max-width: 768px) {
-    #hero .carousel-container, #hero .bannerContent {
-      height: 90vh;
-    }
-    #hero h2 {
-      font-size: 28px;
-    }
-  } */
-  
   .banner-waves {
     display: block;
     width: 100%;
     height: 60px;
     position: relative;
-    /* background-color: lightcoral; */
   }
   
   .wave1 use {
@@ -661,11 +524,11 @@ a:hover {
 
   .customerServiceButton {
     background-color:#fff;
-    height:90px;
     border-radius:50%;
     -moz-border-radius:50%;
     -webkit-border-radius:50%;
-    width:90px;
+    width: 90px;
+    height: 90px;
     text-align: center;
     padding-top: 15px;
     position: relative;
@@ -673,7 +536,6 @@ a:hover {
     margin: -40px auto;
     cursor: pointer;
     transition: all 0.4s ease-in-out;
-    /* border: 1px solid #d1d1d1; */
   }
 
   .customerServiceButton:hover {
