--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1779,11 +1779,15 @@ a:hover {
     height: 100%;
     z-index: 11;
     padding-top: 0px;
+    transition: ease all 0.3s;
+  }
 
+  .detail .content {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition: ease all 0.3s;
+    transition: ease all 0.2s;
   }
 
   .detail .closebutton {
