--- a/assets/css/cooperationCarousel.css
+++ b/assets/css/cooperationCarousel.css
@@ -65,6 +65,7 @@
 .cooperation .cooperationSectionContent hr {
     width: 250px;
     margin: auto;
+    opacity: 0.05;
 }
 
 .cooperation .cooperationIntro {
