--- a/assets/css/globeDots.css
+++ b/assets/css/globeDots.css
@@ -32,82 +32,16 @@ body,
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1E8CE4", endColorstr="${colourEnd}", GradientType=1); */
 /* } */
 
-/* GLOBE */
-.globeDots {
-  position: relative;
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-/* .globe .globe-list {
-  z-index: 10;
-  position: absolute;
-  left: 0;
-  top: 0;
-  list-style: none;
-  display: none;
-}
-
-.globe .globe-list {
-  opacity: 0;
-  transition: opacity 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.globe .globe-list.active {
-  opacity: 1;
-}
-
-.globe .globe-list > li {
-  opacity: 0.4;
-  position: absolute;
-  margin-left: -8px;
-  margin-top: -8px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #00FFD3;
-  transition: opacity 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-
-.globe .globe-list > li.active {
-  opacity: 1;
-  margin-left: -12px;
-  margin-top: -12px;
-  width: 24px;
-  height: 24px;
-}
-
-.globe .globe-list > li:before {
-  content: "";
-  opacity: 0.5;
-  pointer-events: none;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -8px;
-  margin-top: -8px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #00FFD3;
-  -webkit-animation: 2s pulse infinite linear;
-  animation: 2s pulse infinite linear;
-}
-
 @-webkit-keyframes pulse {
   0% {
-    -webkit-transform: scale(1);
+    transform: scale(1);
   }
   50% {
     opacity: 0.5;
   }
   100% {
     opacity: 0;
-    -webkit-transform: scale(2);
+    transform: scale(2);
   }
 }
 @keyframes pulse {
@@ -122,19 +56,99 @@ body,
     transform: scale(2);
   }
 }
-.globe .globe-list > li.active:before {
+
+/* GLOBE */
+.globeDots {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.globeDots .globe-canvas {
+  z-index: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.globe-list {
+  z-index: 10;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  list-style: none;
+  transition: opacity 3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.globe-list.active {
+  opacity: 1;
+}
+
+.globe-list > li {
+  opacity: 0.4;
+  position: absolute;
+  margin-left: -42px;
+  margin-top: -8px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #00FFD3;
+  transition: opacity 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.globe-list > li:before {
+  content: "";
+  opacity: 0.5;
+  pointer-events: none;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -8px;
+  margin-top: -8px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #00FFD3;
+  -webkit-animation: 2s pulse infinite linear;
+          animation: 2s pulse infinite linear;
+}
+
+.globe-list > li.active {
+  opacity: 1;
+  margin-left: -42px;
+  margin-top: -12px;
+  width: 24px;
+  height: 24px;
+  background: #FFFFFF;
+}
+
+.globe-list > li.active:before {
   margin-left: -12px;
   margin-top: -12px;
   width: 24px;
   height: 24px;
-}
-
-.globe .globe-list > li.active,
-.globe .globe-list > li.active:before {
   background: #FFFFFF;
 }
 
-.globe .globe-list .text {
+/* .globe .globe-list > li.active,
+.globe .globe-list > li.active:before {
+  background: #FFFFFF;
+} */
+
+.globe-list > li.active .text {
+  opacity: 1;
+  right: 29px;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 700;
+}
+
+.globe-list .text {
   position: absolute;
   opacity: 0.8;
   right: 21px;
@@ -150,49 +164,29 @@ body,
   transform: translateY(-50%);
 }
 
-.globe .globe-list > li.active .text {
-  opacity: 1;
-  right: 29px;
-  font-size: 20px;
-  line-height: 20px;
-  font-weight: 700;
-} */
-
 .globeDotsSection {
-    background-color: chartreuse; 
+    /* background-color: chartreuse;  */
     display: flex; 
     flex-direction: row; 
     justify-content: center;
 } 
-
-.globeDots .globe-canvas {
-  /* z-index: 1; */
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
 .js-globe {
-    background-color: darkturquoise;
+    /* background-color: darkturquoise; */
 }
 
 .globeDots svg {
-  height: 100%;
+  /* height: 100%;
   width: 100%;
   opacity: 0.5;
   -webkit-animation: rotation 5s linear infinite;
-          animation: rotation 5s linear infinite;
+          animation: rotation 5s linear infinite; */
 }
 
 .svg-wrapper {
   opacity: 0;
-  /* display: inline-block; */
   position: relative;
   width: 80%;
   height: 80%;
-  /* left: 0;
-  right: 0; */
-  /* top: 10%; */
   margin: auto;
   transform: scale(0.5);
   transition: opacity 1s ease-out 1.6s, transform 1s ease-out 1.6s;
