--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,18 +110,18 @@ a:hover {
     width: 90%;
     max-width: 1536px;
   }
+
+  #header .logo .logoImg {
+    padding: 0;
+    margin: 0;
+    max-height: 40px;
+  }
   
-  #header .logo img.header-scrolled {
+  #header .logo .logoImg.header-scrolled {
     content: url("../../assets/img/LeaCloud_logo_white.png");
     width: 245px;
     max-height: 100%;
     margin-left: -7px;
-  }
-
-  #header .logo img {
-    padding: 0;
-    margin: 0;
-    max-height: 40px;
   }
 
   #header .headerList-li {
@@ -277,6 +277,16 @@ a:hover {
       padding-top: 10px;
     }
 
+    #header .logo .logoImg {
+      max-height: 30px;
+    }
+
+    #header .logo .logoImg.header-scrolled {
+      width: 184px;
+      max-height: 50px;
+      margin-left: -5px;
+    }
+
     #header .logo .navMenuImg {
       display: block;
       border-radius: 30%;
@@ -348,7 +358,6 @@ a:hover {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     width: 98%;
-    margin: 0 auto 0 auto;
   }
 
   #banner .bannerContentSubTitle {
@@ -357,7 +366,6 @@ a:hover {
     font-size: 22px;
     font-weight: bold;
     width: 95%;
-    margin: 0 auto 0 auto;
   }
 
   #banner .bannerContentText {
@@ -396,10 +404,12 @@ a:hover {
   @media (max-width: 991px) {
     #banner .bannerContentTitle {
       font-size: 3.5vw;
+      margin-top: 30px;
     }
   
     #banner .bannerContentSubTitle {
       font-size: 2.2vw;
+      margin-top: 5px;
     }
   
     #banner .bannerContentText {
