--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1080,6 +1080,7 @@ a:hover {
     transition: 0.3s;
     margin-left: -10px;
     margin-right: -10px;
+    height: 100%;
   }
 
   .pricing .onHover {
@@ -1202,6 +1203,20 @@ a:hover {
       margin-top: 20px;
       margin-left: -60px;
       font-size: 20px;
+    }
+
+    .pricing ul {
+      columns: 2;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      width: 100%;
+      text-align: start;
+    }
+
+    .pricing ul li {
+      width: 50%;
     }
   }
   
