--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,9 +197,9 @@ a:hover {
   }
   
   .nav-menu .drop-down:hover > ul {
-    opacity: 1;
+    /* opacity: 1;
     top: 100%;
-    visibility: visible;
+    visibility: visible; */
   }
 
   .nav-menu .drop-down ul .triangle {
@@ -1825,13 +1825,13 @@ a:hover {
   /* Detail*/
   .detail {
     background: #3a3a3a;
-    /* opacity: 0.95; */
+    opacity: 0;
     color: #fff;
     font-size: 14px;
     position: fixed;
-    top: 0px;
-    width: 0%;
-    height: 100%;
+    top: 70px;
+    width: 100%;
+    height: 0%;
     z-index: 11;
     padding-top: 0px;
     transition: ease all 0.3s;
