--- a/assets/css/cooperationCarousel.css
+++ b/assets/css/cooperationCarousel.css
@@ -103,67 +103,44 @@
 
 .cooperation .galleryCooperationTitleItemContent {
     height: 40%;
-    margin: 10px;
-    background-color: burlywood;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .cooperation .galleryCooperationItemContent {
-    /* display: flex;
-    flex-direction: row;
-    justify-content: flex-start; */
-    
     height: 50%;
     margin: 10px;
-    background-color: blueviolet;
 }
-
-/* .cooperation .alignItemCenter {
-    align-items: center;
-} */
-
-/* .cooperation .paddingTopRight {
-    padding-top: 30px;
-    padding-right: 20px;
-} */
 
 .cooperation .galleryCooperationItem .fas {
     font-size: 1vw;
-    color: #ffbf00;
 }
 
 .cooperation .galleryCooperationItem p {
     margin-left: 10px;
-    text-align: center;
-    font-size: 1vw;
+    /* text-align: center; */
+    /* font-size: 1vw; */
+    font-size: 4px;
     color: #535353;
 }
 
 .cooperation .galleryCooperationItem img {
-    width: 33%;
-    height: auto;
-    z-index: 3;
-    position: absolute;
-    /* object-fit: contain; */
+    margin-top: 20px;
+    margin-left: 4px;
+    width: 80px;
+    z-index: 1;
 }
 
-/* .cooperation .companyInfo {
-    margin-left: 20px;
-} */
-
-/* .cooperation .galleryCooperationItem .title {
-    font-size: 1vw;
-    color: #ffbf00;
-} */
-
 .cooperation .galleryCooperationItem .title {
-    font-size: 1vw;
+    font-size: 1.5vw;
     margin-left: 10px;
 }
 
 .cooperation .galleryCooperationControls {
     display: none;
 }
-
 
 /* selected previous next first last */
 .cooperation .galleryNavContainer .gallery-item-selected {
@@ -177,34 +154,59 @@
     z-index: 2;
 }
 
-/* .cooperation .galleryCooperationItem.gallery-item-selected .positionTitle {
-    font-size: 1.3vw;
-} */
-
 .cooperation .galleryCooperationItem.gallery-item-selected .title {
-    font-size: 1.5vw;
+    font-size: 2vw;
     font-weight: bold;
 }
 
 .cooperation .galleryCooperationItem.gallery-item-selected img {
-    /* width: 30%; */
+    margin-top: 30px;
+    width: 95px;
 }
 
+.cooperation .galleryCooperationItem.gallery-item-selected p {
+    font-size: 1vw;
+}
+
+.cooperation .linegradientBlue {
+    background: linear-gradient(to right, #1976d2, #b9dcff);
+}
+
+.cooperation .linegradientOrange {
+    background: linear-gradient(to right, #fc8b1c, #fdae0f);
+}
+
+.cooperation .linegradientPink {
+    background: linear-gradient(to right, #b620e0, #e790ff);
+}
+
+.cooperation .fontBlue {
+    color: #1f79e0;
+}
+
+.cooperation .fontOrange {
+    color: #fdb059;
+}
+
+.cooperation .fontPink {
+    color: #e9d4f5;
+}
 
 .galleryCooperationItem.gallery-item-previous,
 .galleryCooperationItem.gallery-item-next {
     height: 260px;
     opacity: 1;
     width: 35%;
-    z-index: 1;
 }
 
 .cooperation .galleryCooperationItem.gallery-item-previous {
     transform: translate(120%, -60%);
+    z-index: 0;
 }
 
 .cooperation .galleryCooperationItem.gallery-item-next {
     transform: translate(120%, 45%);
+    z-index: 1;
 }
 
 .cooperation .galleryCooperationItem.gallery-item-first {
@@ -261,7 +263,7 @@
     }
 
     .cooperation .galleryCooperationItem.gallery-item-selected img {
-        width: 11%;
+        width: 70px;
     }
 
     .cooperation .galleryCooperationItem.gallery-item-previous,
@@ -270,24 +272,16 @@
     .cooperation .galleryCooperationItem.gallery-item-last {
         width: 60%;
         transform: none;
-        height: 10%;
+        height: 100%;
         opacity: 0;
     }
 
-    .cooperation .galleryCooperationItem img {
-        width: 50px
-    }
-
-    .cooperation .galleryCooperationTitleItemContent {
+    /* .cooperation .galleryCooperationTitleItemContent {
         height: 40%;
-    }
+    } */
 
-    .cooperation .galleryCooperationItemContent {
+    /* .cooperation .galleryCooperationItemContent {
         height: 50%;
-    }
-    
-    /* .cooperation .companyInfo {
-        margin-left: 20px;
     } */
 
     .cooperation .galleryCooperationControls {
@@ -295,30 +289,48 @@
         justify-content: space-between;
         position: relative;
         z-index: 2;
-        top: 44%;
-        width: 83%;
-        margin-left: -12px;
+        top: 35%;
+        width: 86%;
+        margin-left: -3%;
     }
 
-    .cooperation .galleryCooperationControls .controlButton {
-        font-size: 3.5vw;
-        color: #ffbf00;
-        background-color: #fff;
-        border-radius: 50%;
+    .cooperation .galleryCooperationControls i {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50px;
+        background: #ffbf00;
+        color: #fff;
+        transition: all 0.4s;
+        cursor: pointer;
     }
     
-    .cooperation .galleryCooperationControls .controlButton:hover {
-        color: #ffffff;
-        background-color: #ffbf00;
+    .cooperation .galleryCooperationControls i:hover {
+        color: #ffbf00;
+        background-color: #fff;
         box-shadow: 0 0 20px rgba(33, 33, 33, .2);
     }
-}
 
-@media (max-width: 541px) {
-    .cooperation .galleryCooperationControls {
-        margin-left: -4px;
+    .cooperation .galleryCooperationItem.gallery-item-previous {
+        left: 18%;
+        transform: translateX(-50%);
     }
-    .cooperation .galleryCooperationControls .controlButton {
-        font-size: 5.5vw;
+    
+    .cooperation .galleryCooperationItem.gallery-item-next {
+        left: 82%;
+        transform: translateX(-50%);
+    }
+    
+    .cooperation .galleryCooperationItem.gallery-item-first {
+        left: 19%;
+        transform: translateX(-50%);
+    }
+    
+    .cooperation .galleryCooperationItem.gallery-item-last {
+        left: 81%;
+        transform: translateX(-50%);
     }
 }
